--- a/about.Rmd
+++ b/about.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "ISSS608"
 description: |
-  MITB ISSS608 Visual Analytics Page.
+  MITB ISSS608 Visual Analytics Page for Jiang Mingjun
 ---
 
 ```{r setup, include=FALSE}
